[project]
name = "news-aggregator"
version = "0.1.0"
description = "a fastapi based api for fetching and aggregating dev news"
authors = [
    { name = "valentino7504", email = "mhoy0bq0t@mozmail.com" }
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.121.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "redis>=7.1.0",
]

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "pytest>=9.0.1",
]
